# master-programming-task

lab2/: CMakeLists.txt
lab2/include/: iomanip.hpp
lab2/tests/: iomanip.cpp
lab3/: CMakeLists.txt
lab3/include/: proxy.hpp
